--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<title></title>
 </head>
 <body>
-
-<script type="text/javascript" src="bundle/app.bundle.js" charset="utf-8"></script>
+	<div class="container">
+		
+	</div>
+	<script type="text/javascript" src="bundle/app.bundle.js" charset="utf-8"></script>
 </body>
 </html>
